cabal-version:  >= 1.10
name:           splitmix
version:        0.0.1
x-revision:     1

synopsis:       Fast Splittable PRNG
description:
  Pure Haskell implementation of SplitMix described in
  .
  Guy L. Steele, Jr., Doug Lea, and Christine H. Flood. 2014.
  Fast splittable pseudorandom number generators. In Proceedings
  of the 2014 ACM International Conference on Object Oriented
  Programming Systems Languages & Applications (OOPSLA '14). ACM,
  New York, NY, USA, 453-472. DOI:
  <https://doi.org/10.1145/2660193.2660195>
  .
  The paper describes a new algorithm /SplitMix/ for /splittable/
  pseudorandom number generator that is quite fast: 9 64 bit arithmetic/logical
  operations per 64 bits generated.
  .
  /SplitMix/ is tested with two standard statistical test suites (DieHarder and
  TestU01, this implementation only using the former) and it appears to be
  adequate for "everyday" use, such as Monte Carlo algorithms and randomized
  data structures where speed is important.
  .
  In particular, it __should not be used for cryptographic or security applications__,
  because generated sequences of pseudorandom values are too predictable
  (the mixing functions are easily inverted, and two successive outputs
  suffice to reconstruct the internal state).

license:        BSD3
license-file:   LICENSE
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
bug-reports:    https://github.com/phadej/splitmix#issues
category:       System
build-type:     Simple
tested-with:
  GHC==7.6.3,
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.3,
  GHC==8.6.1

extra-source-files:
  README.md
  Changelog.md

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src
  exposed-modules:
    System.Random.SplitMix
  build-depends:
    base    >=4.5     && <4.13,
    deepseq >=1.3.0.1 && <1.5,
    time    >=1.4.0.1 && <1.9,
    random  >=1.1     && <1.2

  -- dump-core
  -- build-depends: dump-core
  -- ghc-options: -fplugin=DumpCore -fplugin-opt DumpCore:core-html

source-repository head
  type:     git
  location: https://github.com/phadej/splitmix.git

benchmark comparison
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   bench
  main-is:          Bench.hs
  build-depends:
    base,
    splitmix,
    random,
    containers >=0.5     && <0.7,
    tf-random  >=0.5     && <0.6,
    criterion  >=1.1.0.0 && <1.6

test-suite montecarlo-pi
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   tests
  main-is:          SplitMixPi.hs
  build-depends:
    base,
    splitmix

test-suite splitmix-dieharder
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts
  hs-source-dirs:   tests
  main-is:          Dieharder.hs
  build-depends:
    base,
    splitmix,
    random,
    deepseq,
    async                 >=2.2.1    && <2.3,
    vector                >=0.12.0.1 && <0.13,
    base-compat-batteries >=0.10.1   && <0.11,
    bytestring            >=0.10.4.0 && <0.11,
    process               >=1.1.0.2  && <1.7,
    tf-random             >=0.5      && <0.6
