cabal-version:      >=1.10
name:               splitmix
version:            0.0.2
synopsis:           Fast Splittable PRNG
description:
  Pure Haskell implementation of SplitMix described in
  .
  Guy L. Steele, Jr., Doug Lea, and Christine H. Flood. 2014.
  Fast splittable pseudorandom number generators. In Proceedings
  of the 2014 ACM International Conference on Object Oriented
  Programming Systems Languages & Applications (OOPSLA '14). ACM,
  New York, NY, USA, 453-472. DOI:
  <https://doi.org/10.1145/2660193.2660195>
  .
  The paper describes a new algorithm /SplitMix/ for /splittable/
  pseudorandom number generator that is quite fast: 9 64 bit arithmetic/logical
  operations per 64 bits generated.
  .
  /SplitMix/ is tested with two standard statistical test suites (DieHarder and
  TestU01, this implementation only using the former) and it appears to be
  adequate for "everyday" use, such as Monte Carlo algorithms and randomized
  data structures where speed is important.
  .
  In particular, it __should not be used for cryptographic or security applications__,
  because generated sequences of pseudorandom values are too predictable
  (the mixing functions are easily inverted, and two successive outputs
  suffice to reconstruct the internal state).

license:            BSD3
license-file:       LICENSE
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
bug-reports:        https://github.com/phadej/splitmix#issues
category:           System
build-type:         Simple
tested-with:
  GHC ==8.6.4 || ==8.4.4 || ==8.2.2 || ==8.0.2 || ==7.10.3 || ==7.8.4 || ==7.6.3 || ==7.4.2 || ==7.2.2 || ==7.0.4

extra-source-files:
  README.md
  Changelog.md

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src
  exposed-modules:  System.Random.SplitMix

  -- dump-core
  -- build-depends: dump-core
  -- ghc-options: -fplugin=DumpCore -fplugin-opt DumpCore:core-html

  build-depends:
      base     >=4.3     && <4.13
    , deepseq  >=1.3.0.0 && <1.5
    , random   >=1.0     && <1.2
    , time     >=1.2.0.3 && <1.9

source-repository head
  type:     git
  location: https://github.com/phadej/splitmix.git

benchmark comparison
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   bench
  main-is:          Bench.hs
  build-depends:
      base
    , containers  >=0.4.2.1 && <0.7
    , criterion   >=1.1.0.0 && <1.6
    , random
    , splitmix
    , tf-random   >=0.5     && <0.6

test-suite montecarlo-pi
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   tests
  main-is:          SplitMixPi.hs
  build-depends:
      base
    , splitmix

test-suite splitmix-dieharder
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts
  hs-source-dirs:   tests
  main-is:          Dieharder.hs
  build-depends:
      async                  >=2.2.1    && <2.3
    , base
    , base-compat-batteries  >=0.10.5   && <0.11
    , bytestring             >=0.9.1.8  && <0.11
    , deepseq
    , process                >=1.0.1.5  && <1.7
    , random
    , splitmix
    , tf-random              >=0.5      && <0.6
    , vector                 >=0.11.0.0 && <0.13
