cabal-version: 2.4
name:          splitmix-tools
version:       0
synopsis:      Tools for splitmix development
description:
  * generate-mix32 generates JavaScript for SplitMix32 GHCJS implementation.

license:       BSD-3-Clause
license-file:  LICENSE
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
category:      System, Random

source-repository head
  type:     git
  location: https://github.com/phadej/splitmix.git

library
  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:
    , base          >=4.3 && <5
    , transformers

  exposed-modules:  Dummy

test-suite generate-mix32
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src
  main-is:          GenMix32.hs
  build-depends:
    , base
    , base-compat   ^>=0.10.5
    , transformers

executable splitmix-avalanche
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts
  hs-source-dirs:   src
  main-is:          Avalanche.hs
  other-modules:    SimulatedAnnealing
  build-depends:
    , base
    , splitmix
    , vector    >=0.11.0.0 && <0.13
